# misc_experiments

./: .gitignore  pyproject.toml
experiments/: spiking_evo_data.pklk  wta_cs.py
experiments/cellular/: cellular.py  cellular2.py
experiments/genetic_programming/: gp.py  jax_expr_test.py  jax_gp.py
experiments/kmeansmem/: kmeansmem.py  multistep_reservoir_rls.py  resintuition.py  torch_kmem.py  torch_kmem5.py  torch_kmem_simple.py
experiments/npde/: a2c_policy.py  rdqn_policy.py  run_debug_a2c.py  run_debug_dqn.py  run_dqn.py
experiments/npde/env/: grid_a_to_b.py  grid_a_to_b_rand.py  grid_boad.py
experiments/npde/model_experiments/: ood.py  ood_basic_2b.py  ood_basic_3.py  ood_categorical.py  ood_latent.py  ood_latent_mixed.py  ood_latent_s_mixed.py  ood_nonrandom_sample.py  spherical_dist.py
experiments/reservoir/: 2d_reservoir.py  evolve_tanh_reservoir.py  generate_data.py  raindrop.py  single_test.py  single_test_GD.py  single_test_OLS.py  spiking_module.py  spiking_module_faster.py  tanh_module.py
experiments/reservoir/app/: README.md  export_efficient_global.py  export_enhanced.py  export_enhanced_1024.py  export_enhanced_512.py  export_global_fixed.py  export_onnx.py  export_simple.py  hugo.toml  index.html  inspect_onnx.py  package-lock.json  package.json  tailwind.config.js  vite.config.js
experiments/reservoir_nlp/: bench.py  model.py  nohup.out  sample.py  train.py  train_res.py  train_res_dual.py
misc_experiments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
myproject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+20 files in other folders)
